--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -3,6 +3,7 @@ version: '3.9'
 services:
   postgres:
     image: postgres:latest
+    restart: always
     ports:
       - ${POSTGRES_PORT}
     env_file:
