--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^5.17.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "recharts": "^2.12.7",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
